# django-appliku-copier

./: .gitignore  APPLIKU.md  CLAUDE.md  OVERVIEW.md  README.md  TASKS.md  copier.yml  pyproject.toml
.claude/: settings.local.json
appliku_cli/: api.py  app_setup.py  cli.py  credentials.py  datastores.py  detect.py  logs.py  provision.py
example/demo_project/: .copier-answers.yml  .env.example  .gitignore  Dockerfile  appliku.yml  pyproject.toml  release.sh  requirements.txt  run.sh  worker.sh
example/demo_project/app/: views.py
example/demo_project/config/: settings.py
reference/: appliku.yml
scripts/: list_db_types.py  regenerate_example.py  update_appliku_docs.sh
template/: Dockerfile.jinja  _patch_whitenoise_collectstatic.py.jinja  appliku.yml.jinja  celery-beat.sh.jinja  celery-worker.sh.jinja  copier.yml  release.sh.jinja  run.sh.jinja  worker.sh.jinja
tests/: conftest.py  test_django_check.py  test_snapshots.py  test_yaml.py
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/baseline/: appliku.yml
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/celery-rabbitmq/: appliku.yml
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/celery-rabbitmq-beat/: appliku.yml
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/celery-redis/: appliku.yml
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/celery-redis-beat/: appliku.yml
tests/snapshots/test_snapshots/test_appliku_yml_snapshot/full/: appliku.yml
tests/test_cli/: test_api.py  test_app_setup.py  test_credentials.py  test_detect.py  test_provision.py
(+6 files in other folders)
