[project]
name = "djangoappliku"
version = "0.1.0"
description = "Copier-based scaffold for Django deployments on Appliku"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
appliku-setup = "appliku_cli.cli:main"

[dependency-groups]
dev = [
    "copier>=9.0",
    "pytest>=8.0",
    "pytest-snapshot>=0.9",
    "pyyaml>=6.0",
    "requests>=2.31",
    "responses>=0.25",
    "django>=4.2",
    "django-environ>=0.11",
    "whitenoise>=6.0",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
